2004-04-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/fs-ecos.c (jffs2_extend_file): Fix creation of hole inode's
	* src/fs-ecos.c (jffs2_fo_lseek): Allow seeking past EOF.
	* tests/fseek1.c (main): fseek and simple test of a hole in a file
	* cdl/jffs2.cdl: Added new test program fseek1.
	
2004-03-31  David Woodhouse  <dwmw2@infradead.org>

	* src/fs-ecos.c (jffs2_fo_write): Set ri.isize so that non-append
	writes don't truncate the file.
	
2004-03-03  Thomas Koeller  <thomas.koeller@baslerweb.com>

        * src/fs-ecos.c: 
	Make JFFS2 honor O_TRUNC flag (again) when opening files with read
	Access.

2004-03-17  Oyvind Harboe <oyvind.harboe@zylin.com>

	* src/fs-ecos.c: 
	With CYGOPT_FS_JFFS2_WRITE=1, file creation failed. The problem
	was introduced in fs-ecos.c 1.20
	
2004-03-11  Oyvind Harboe <oyvind.harboe@zylin.com>
	
	* src/fs-ecos.c:
	  Fixed umount memory leak. root->jffs2_i.dents where not freed.
	
2004-02-20  Vincent Catros  <Vincent.Catros@elios-informatique.fr>

	* src/fs-ecos.c :
	(jffs2_find) Policy to skip path separator is no longer
	"if '/' then skip" but "while '/' then skip" allowing
	multi '/' separators (i.e : /tmp////foo).
	(find_entry) Policy to detect end of path is no longer
	"if '\0' then end_of_path"
	but "while '/' skip it and then if '\0' then end_of_path"
	allowing path terminated with any number of '/'
	(i.e : chdir(/tmp///)).

2004-03-03  Thomas Koeller  <thomas.koeller@baslerweb.com>

       * src/fs-ecos.c:
       Make JFFS2 honor O_TRUNC flag when opening files /w read access.

2004-02-17  David Woodhouse  <dwmw2@redhat.com>

	* src/fs-ecos.c:
	Don't re-initialise the already-locked f->sem. It makes eCos unhappy. 

2004-01-27  David Woodhouse  <dwmw2@redhat.com>

	* src/write.c: 
	Fix bug noted by Howard Gray; dirents belong to, and should dirty, 
	the _parent_inode, not the child (which may be zero in the case 
	of an unlink).

2004-01-09  Thomas Koeller  <thomas.koeller@baslerweb.com>
