@@ -1,3 +1,8 @@
+2004-04-21  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/fs-ecos.c: Merge from public MTD - verify file position
+	after each operation (safety check).
+
 2004-04-06  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/fs-ecos.c (jffs2_extend_file): Fix creation of hole inode's
